--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "anonymous-message-app",
+  "name": "anonymous-server",
   "version": "1.0.0",
-  "description": "An anonymous messaging server with user accounts",
+  "description": "Anonymous message server like NGL",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3"
+    "ejs": "^3.1.8",
+    "bcrypt": "^5.1.0",
+    "express-session": "^1.17.3",
+    "body-parser": "^1.20.2"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
