--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ejs": "^3.1.8",
     "bcrypt": "^5.1.0",
     "express-session": "^1.17.3",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "multer": "^1.4.4"  // Added multer dependency
   },
   "engines": {
     "node": "16.x"
