--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bcrypt": "^5.1.0",
     "express-session": "^1.17.3",
     "body-parser": "^1.20.2",
-    "multer": "^1.4.4",
+    "multer": "^1.4.4"  // Added multer dependency
   },
   "engines": {
     "node": "16.x"
